--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: longurl
-Title: Expand Short URLs using the 'LongURL' API
-Version: 0.0.0.9000
+Title: Expand Short URLs Using the 'LongURL' API
+Version: 0.1.0
 Authors@R: c(person("Bob", "Rudis", email = "bob@rudis.net", role = c("aut", "cre")))
 Description: Interface to the 'LongURL' API to identify known URL shortener services
-             and expand vectors of short URLs.
-Depends: R (>= 3.2.1)
+             and expand vectors of short URLs with optional error checking and
+             URL validation. See <http://longurl.org/> for more information about
+             'LongURL'.
+Depends: R (>= 3.1.0)
 License: MIT + file LICENSE
 LazyData: true
 Suggests: testthat
