--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,8 @@
 export(expand_urls)
 import(dplyr)
 import(httr)
-import(pbapply)
-importFrom(jsonlite,fromJSON)
+importFrom(purrr,map)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_df)
+importFrom(purrr,map_lgl)
+importFrom(purrr,safely)
