--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: longurl
 Title: Expand Short 'URLs'
-Version: 0.3.2
+Version: 0.3.3
 Authors@R: c(
     person("Bob", "Rudis", email = "bob@rud.is", role = c("aut", "cre"), 
            comment = c(ORCID = "0000-0001-5670-2640")),
@@ -14,12 +14,12 @@ Description: Tools are provided to expand vectors of short URLs into long 'URLs'
     larger dependencies, such as 'Redis', to gain a longer-term performance boost 
     at the expense of added complexity.
 Maintainer: Bob Rudis <bob@rud.is>
-Depends: R (>= 3.2.0)
+Depends: R (>= 3.6.0)
 Encoding: UTF-8
 License: MIT + file LICENSE
 LazyData: true
-Suggests:
-    testthat
-Imports:
+Suggests: 
+    tinytest
+Imports: 
     httr
 RoxygenNote: 6.0.1.9000
